syntax = "proto3";

package user;

service User{
    rpc Login(LoginRequest) returns (LoginResponse) {} // 用户登录
    rpc Register(RegisterRequest) returns (RegisterResponse) {} // 用户注册
    rpc Account(AccountRequest) returns (AccountResponse) {} // 用户注册
    rpc UserList(UserListRequest) returns (UserListResponse){} // 用户列表
}

message LoginRequest {
    string userName = 1; // 1.账号和密码登录
    string mobile = 2; // 2.手机号和验证码登录
    string password = 3; // 密码
    string captcha = 4; // 验证码
}

message LoginResponse {
    string token = 1; // 令牌
    string authority = 2; // 权限
    string message = 3; // 提示信息
    bool status = 4; // 请求状态
}

message RegisterRequest {
    string userName = 1;
    string mobile = 2;
    string email = 3;
    string password = 4;
    string confirm = 5;
    string captcha = 6;
}

message RegisterResponse {
    string token = 1;
    string authority = 2;
    string message = 3;
    bool status = 4;
}

message AccountRequest {
    string token = 1;
}

message AccountResponse {
    string userName = 1;
    string authority = 2;
    string message = 3;
    bool status = 4;
}

message UserListRequest {
    string userName = 1; // 根据用户名称模糊查询
    int32 status = 2; // 用户状态
    int32 pageNum = 3; // 当前页
    int32 pageSize = 4; // 每页条数
    int32 roleId = 5; // 角色id
}

message UserListResponse {
    repeated string list = 1;
    bool status = 2;
}


